2015-08-05  Filip Pizlo  <fpizlo@apple.com>

        Lightweight locks should be adaptive
        https://bugs.webkit.org/show_bug.cgi?id=147545

        Reviewed by Geoffrey Garen.

        A common idiom in WebKit is to use spinlocks. We use them because the lock acquisition
        overhead is lower than system locks and because they take dramatically less space than system
        locks. The speed and space advantages of spinlocks can be astonishing: an uncontended spinlock
        acquire is up to 10x faster and under microcontention - short critical section with two or
        more threads taking turns - spinlocks are up to 100x faster. Spinlocks take only 1 byte or 4
        bytes depending on the flavor, while system locks take 64 bytes or more. Clearly, WebKit
        should continue to avoid system locks - they are just far too slow and far too big.

        But there is a problem with this idiom. System lock implementations will sleep a thread when
        it attempts to acquire a lock that is held, while spinlocks will cause the thread to burn CPU.
        In WebKit spinlocks, the thread will repeatedly call sched_yield(). This is awesome for
        microcontention, but awful when the lock will not be released for a while. In fact, when
        critical sections take tens of microseconds or more, the CPU time cost of our spinlocks is
        almost 100x more than the CPU time cost of a system lock. This case doesn't arise too
        frequently in our current uses of spinlocks, but that's probably because right now there are
        places where we make a conscious decision to use system locks - even though they use more
        memory and are slower - because we don't want to waste CPU cycles when a thread has to wait a
        while to acquire the lock.

        The solution is to just implement a modern adaptive mutex in WTF. Luckily, this isn't a new